# src/routes/authRoutes.ts
@@ -1,8 +1,9 @@
 import express from 'express';
-import { register } from '../controllers/authController';
+import { register, login  } from '../controllers/authController';
 
 const router = express.Router();
 
 router.post('/register', register);
+router.post('/login', login);
 
 export default router;
